backend/contracts/freelancer/check3.log
    Checking stellar-freelancer-contract v0.1.0 (/home/phantom-call/stellar-creator-portfolio/backend/contracts/freelancer)
warning: use of deprecated method `soroban_sdk::events::Events::publish`: use the #[contractevent] macro on a contract event type
   --> contracts/freelancer/src/lib.rs:111:22
    |
111 |         env.events().publish(
    |                      ^^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

warning: use of deprecated method `soroban_sdk::events::Events::publish`: use the #[contractevent] macro on a contract event type
   --> contracts/freelancer/src/lib.rs:172:22
    |
172 |         env.events().publish(
    |                      ^^^^^^^

warning: use of deprecated method `soroban_sdk::events::Events::publish`: use the #[contractevent] macro on a contract event type
   --> contracts/freelancer/src/lib.rs:256:22
    |
256 |         env.events().publish(
    |                      ^^^^^^^

warning: use of deprecated method `soroban_sdk::events::Events::publish`: use the #[contractevent] macro on a contract event type
   --> contracts/freelancer/src/lib.rs:348:22
    |
348 |         env.events().publish(
    |                      ^^^^^^^

warning: use of deprecated method `soroban_sdk::events::Events::publish`: use the #[contractevent] macro on a contract event type
   --> contracts/freelancer/src/lib.rs:376:26
    |
376 |             env.events().publish(
    |                          ^^^^^^^

error[E0382]: use of moved value: `freelancer`
   --> contracts/freelancer/src/lib.rs:112:53
    |
 63 |         freelancer: Address,
    |         ---------- move occurs because `freelancer` has type `soroban_sdk::Address`, which does not implement the `Copy` trait
...
 98 |         freelancers.push_back(freelancer);
    |                               ---------- value moved here
...
112 |             (FREELANCER, symbol_short!("register"), freelancer),
    |                                                     ^^^^^^^^^^ value used here after move
    |
help: consider cloning the value if the performance cost is acceptable
    |
 98 |         freelancers.push_back(freelancer.clone());
    |                                         ++++++++

For more information about this error, try `rustc --explain E0382`.
warning: `stellar-freelancer-contract` (lib) generated 5 warnings
error: could not compile `stellar-freelancer-contract` (lib) due to 1 previous error; 5 warnings emitted
